--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,8 @@
 <div class="jumbotron">
+<div class="form-inline">
+  <input type="text" class="form-control" placeholder="Bloque" id="bloq" >
+  <input type="text" class="form-control" placeholder="Salónes u oficina" id="offic" > 
+</div>
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
